--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,5 @@
   "lerna": "3.22.1",
   "packages": ["packages/*"],
   "version": "independent",
-  "npmClient": "yarn",
-  "useWorkspaces": true
+  "npmClient": "yarn"
 }
